pjcone_landing 후원 링크를 추가

--- a/pjcone_landing/index.html
+++ b/pjcone_landing/index.html
@@ -233,6 +233,20 @@
             </div>
         </section>
 
+        <section
+            style="text-align: center; padding: 60px 20px; border-top: 1px solid var(--border-color); background: linear-gradient(to bottom, #0a0a0a, #111);">
+            <h3 style="color: #fff; margin-bottom: 20px;" data-i18n="support-title">Project: Cone의 지속 가능성</h3>
+            <p style="font-size: 0.95rem; color: #888; max-width: 650px; margin: 0 auto 30px; line-height: 1.8;"
+                data-i18n="support-desc">
+                우리는 광고 수익, 유료 클라이언트 제공 등 다양한 자립 모델을 검토하고 있습니다.
+                하지만 사용자의 자발적인 후원은 우리가 원칙을 지키며 가장 빠르게 성장할 수 있는 가장 순수한 동력입니다.
+            </p>
+            <a href="https://www.patreon.com/is2you2" class="cta-button btn-secondary" style="border-color: #555; color: #ccc;"
+                data-i18n="btn-support">
+                자율 후원으로 응원하기
+            </a>
+        </section>
+
         <footer>
             <p data-i18n="footer-text">&copy; 2020-2025 Project: Cone. Built for Digital Privacy & Sovereign
                 Communication.</p>
@@ -284,7 +298,10 @@
                 "bottom-desc": "No complex setup required. Follow the instructions and complete your fortress.",
                 "btn-guide": "App Features Guide",
                 "btn-server": "Start Server Setup",
-                "footer-text": "&copy; 2020-2025 Project: Cone. Built for Digital Privacy & Sovereign Communication."
+                "footer-text": "&copy; 2020-2025 Project: Cone. Built for Digital Privacy & Sovereign Communication.",
+                "support-title": "Sustainability of Project: Cone",
+                "support-desc": "We explore various self-sustaining models, including minimal ads and premium clients. However, voluntary donations remain the purest driving force that allows us to grow while staying true to our core principles.",
+                "btn-support": "Support our Mission"
             },
             ko: {
                 "btn-demo-windows": "데모 버전 체험 (EXE)",
