--- a/pjcone_pwa/index.html
+++ b/pjcone_pwa/index.html
@@ -31,7 +31,7 @@
     var swRegListenerCallback = {};
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker
-        .register(`${sub_path}assets/sw.js?v=20251030-1`)
+        .register(`${sub_path}assets/sw.js?v=20251223`)
         .then((reg) => {
           console.log('Service Worker Registered');
           swReg = reg;
@@ -56,6 +56,6 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.779079b3b03181f8.js" type="module"></script><script src="polyfills.c3a9e4b87df5be46.js" type="module"></script><script src="main.2bf0cac9d1cb3f82.js" type="module"></script></body>
+<script src="runtime.12cfad095c1b8a57.js" type="module"></script><script src="polyfills.c3a9e4b87df5be46.js" type="module"></script><script src="main.2bf0cac9d1cb3f82.js" type="module"></script></body>
 
 </html>
