pjcone_landing '우리' 표현 줄이기

--- a/pjcone_landing/index.html
+++ b/pjcone_landing/index.html
@@ -209,11 +209,11 @@
             </div>
             <div class="feature-card">
                 <h3 data-i18n="f5-t">05. 실체적인 보안 해답</h3>
-                <p data-i18n="f5-d">개인정보 유출과 사생활 침해라는 시대적 위협에 대해, 우리는 '물리적 분리'라는 가장 차가운 기술적 해답을 제시합니다.</p>
+                <p data-i18n="f5-d">개인정보 유출과 사생활 침해라는 시대적 위협에 대해, '물리적 분리'라는 가장 차가운 기술적 해답을 제시합니다.</p>
             </div>
             <div class="feature-card">
                 <h3 data-i18n="f6-t">06. 익명성과 실용주의</h3>
-                <p data-i18n="f6-d">어떤 개인정보도 요구하지 않습니다. 우리는 자유를 위한 도구를 제공할 뿐, 가치를 채우는 것은 당신의 몫입니다.</p>
+                <p data-i18n="f6-d">어떤 개인정보도 요구하지 않습니다. 자유를 위한 도구를 제공할 뿐, 가치를 채우는 것은 당신의 몫입니다.</p>
             </div>
         </section>
 
@@ -238,8 +238,8 @@
             <h3 style="color: #fff; margin-bottom: 20px;" data-i18n="support-title">Project: Cone의 지속 가능성</h3>
             <p style="font-size: 0.95rem; color: #888; max-width: 650px; margin: 0 auto 30px; line-height: 1.8;"
                 data-i18n="support-desc">
-                우리는 광고 수익, 유료 클라이언트 제공 등 다양한 자립 모델을 검토하고 있습니다.
-                하지만 사용자의 자발적인 후원은 우리가 원칙을 지키며 가장 빠르게 성장할 수 있는 가장 순수한 동력입니다.
+                이 프로젝트는 광고 수익, 유료 클라이언트 제공 등 다양한 자립 모델을 검토하고 있습니다.
+                하지만 사용자의 자발적인 후원은 이 프로젝트가 원칙을 지키며 가장 빠르게 성장할 수 있는 가장 순수한 동력입니다.
             </p>
             <a href="https://www.patreon.com/is2you2" class="cta-button btn-secondary" style="border-color: #555; color: #ccc;"
                 data-i18n="btn-support">
