--- a/pjcone_pwa/index.html
+++ b/pjcone_pwa/index.html
@@ -8,7 +8,7 @@
   <base id="site_base" href="/pjcone_pwa/">
 
   <meta name="color-scheme" content="light dark">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, interactive-widget=resizes-content">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
 
@@ -54,6 +54,6 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.44969c6c1a408f82.js" type="module"></script><script src="polyfills.c3a9e4b87df5be46.js" type="module"></script><script src="main.d89cf3ca3a5c4a9e.js" type="module"></script></body>
+<script src="runtime.44969c6c1a408f82.js" type="module"></script><script src="polyfills.c3a9e4b87df5be46.js" type="module"></script><script src="main.26652b4d52c3fb16.js" type="module"></script></body>
 
 </html>
